# Sumfactorization

./: CMakeLists.txt  a.out  doxygen_config  polynomial.cpp  polynomialspace.cpp
Documentation/: doc.tex
Enes/: a.out  divided_differences.cpp  hosvd.cpp  main.cpp  polynomial.cpp  polynomial.h  scalar_product.cpp
Enes/HOSVD/: a.out  hosvd.cpp  polynomial.h
Enes/HOSVD/Bachelorthesis/TeX/: bachelorarbeit.aux  bachelorarbeit.tex  bachelorarbeit.toc
Enes/HOSVD/C++/: HOSVD.cpp  Quadrature.h  a.out
Enes/HOSVD/C++/Eigen/src/SVD/: SVDBase.h
Enes/HOSVD/Matlab/: equidistant_points.m  main.m
Enes/HOSVD/Matlab/includes/: tensor_to_matrix.m
Enes/HOSVD/Matlab/includes/bilinear forms/: laplace_tensor.m  mass_tensor.m
Enes/HOSVD/Matlab/includes/polynomial basis/: eval_lagrange.m  eval_lagrange_deriv.m
Enes/HOSVD/Matlab/includes/tensor to matrix/: tensor_to_matrix.m  transform_1d.m  transform_2d.m
Enes/HOSVD/Matlab/lib/fem-lab/error analysis/: error_L2.m  error_runge.m
Enes/HOSVD/Matlab/lib/fem-lab/help function/: hf_eval_poly.m  hf_eval_poly_transformed.m  hf_eval_solution.m  hf_eval_solution_vectorized.m  hf_exponent_to_column.m  hf_interpolation.m  hf_kronecker_delta.m  hf_remove_duplicates.m  hf_vtk.m
Enes/Sumfactorization/: #Integrate.cpp#  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Integrate.cpp  Makefile  Polynomial.h  Quadrature.h  Quadrature.h~  a.out  cmake_install.cmake
Enes/Sumfactorization/Sumfactorization/: CMakeLists.txt
Enes/Sumfactorization/Sumfactorization/include/: CMakeLists.txt  integrate.h  la_operations.h.autosave  polynomial.h
Enes/Sumfactorization/Sumfactorization/tests/: a.out  integrate  integrate.cc  matrix  matrix_mult.cc  matrix_mult.cc.autosave  test.cpp
Enes/Sumfactorization/Testing/Temporary/: CTestCostData.txt
Enes/Sumfactorization/doc/: doc.aux  doc.toc
Enes/Sumfactorization/inc/: quadrature.h
Enes/Sumfactorization/src/: integrate.cpp
Enes/Sumfactorization/tests/: dummy.cc
Marcel/: Horner chebyshef.cpp  Polynomialspace.pro  main.cpp
Marcel/build-marcel-Desktop_Qt_5_7_1_GCC_64bit-Debug/: Makefile  marcel
Marcel/marcel/: main.cpp  marcel.pro  quadrature  quadrature~
doc/: 2d.tex  doc.aux  doc.tex  doc.toc
doc/Latex/: sumfactorization.tex
doxygen/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  annotated.html  class_integrate-members.html  class_integrate.html  class_polynomial-members.html  class_polynomial.html  class_quadrature-members.html  class_quadrature.html  class_v_m_u_l_t-members.html  class_v_m_u_l_t.html  classconstexpr__array-members.html  classconstexpr__array.html  classes.html  constexpr__array_8h.html  constexpr__array_8h_source.html  dir_271efa2a4ab50a34b92271503d1d3160.html  dir_4b1d140cb9a430ba11cb2346253f0226.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_847dc4ce7d5e6785f1e71a384708761e.html  dir_d44c64559bbebec7f509842c48db8b23.html  feature__tests_8c.html  feature__tests_8cxx.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  integrate_8cc.html  integrate_8h.html  integrate_8h_source.html  la__operations_8h.html  (+24 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  (+12 more)
doxygen/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  annotated.tex  class_integrate.tex  class_polynomial.tex  class_quadrature.tex  class_v_m_u_l_t.tex  classconstexpr__array.tex  constexpr__array_8h.tex  dir_271efa2a4ab50a34b92271503d1d3160.tex  dir_4b1d140cb9a430ba11cb2346253f0226.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_847dc4ce7d5e6785f1e71a384708761e.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  integrate_8cc.tex  integrate_8h.tex  la__operations_8h.tex  math__constexpr_8h.tex  namespacemath.tex  namespacemath_1_1detail.tex  namespaces.tex  polynomial_8cc.tex  polynomial_8h.tex  quadrature_8cc.tex  quadrature_8h.tex  quadrature__constexpr_8h.tex  refman.tex  structmath_1_1detail_1_1gen__seq.tex  structmath_1_1detail_1_1gen__seq_3_010_00_01_is_8_8_8_01_4.eps  structmath_1_1detail_1_1gen__seq_3_010_00_01_is_8_8_8_01_4.tex  structmath_1_1detail_1_1seq.tex  structmath_1_1detail_1_1sin__coeffs.tex  vmult_8h.tex
include/: constexpr_array.h  constexpr_math.h  constexpr_matrix.h  constexpr_quadrature.h  constexpr_sin.h  constexpr_vmult.h  constexpr_vmult_3D.h  integrate.h  la_operations.h  math_constexpr.h  polynomial.h  quadrature.h  quadrature_constexpr.h  quadrature_nonclass.h  vmult.h
include/polynomialbasis/: constexpr_bernstein.h  constexpr_lagrange.h
nonconstexpr/include/: constexpr_array.h  constexpr_matrix.h  constexpr_quadrature.h  constexpr_vmult.h  constexpr_vmult_3D.h
nonconstexpr/include/polynomialbasis/: constexpr_lagrange.h  constexpr_newton.h
nonconstexpr/tests/: a.out  numeric_testing.cc  quadrature.cc  vmult_3D.cc
nonconstexpr/tests/header/: constexpr_lagrange.cc  constexpr_math.cc  constexpr_quadrature.cc
nonconstexpr/tests/polynomialbasis/: bernstein.cc  lagrange.cc
tests/: a.out  integrate  integrate.cc  matrices  matrices.cc  numeric_testing.cc  polynomial  polynomial.cc  quadrature.cc  vmult  vmult.cc  vmult.cc~master  vmult_3D.cc
tests/header/: constexpr_array.cc  constexpr_matrix.cc  constexpr_vmult.cc  constexpr_vmult_3D.cc
tests/polynomialbasis/: lagrange.cc  newton.cc
(+32 files in other folders)
